# Routina

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
backend/: Cargo.toml
backend/.sqlx/: query-358072342e0022ae1859aa230085f2ddaccc4859bb94b5c1a69aa4d31aadd53c.json  query-382af314c16da18b4112c87db5215868a6a8b8227485d5c34d7d36a03558f65c.json  query-42932d803b9542a39f96b41be56154ca8729afed7db9626454157229f3da01db.json  query-48f0c534cc8d4f369788a80ad0360a61c11154726097ebfac9b3a17c5699cf51.json  query-5b142a3e58b8bc1e4baf7a3acbc882fcabcb55f52b5c9b6338b973e8e88642df.json  query-7b1ca3aa02d5b9dc6467398415cf648afcbf459b39527f5cc5bace6a3bd0acbe.json  query-8ea085caeb5c9bf9121a80c4547d5a611f1e82e49d5fac0e9d79e949dcb2f573.json  query-94a87225e6e2f16c0920c490deaa8682e34cf5e9087389d556973444848b04b4.json  query-99faae816ed100bbdf32fa3efeade6fa1ca07604beb609c2b56e667c455df641.json  query-b2970165ec2a44fa96b4f36785eb9404d0efe90aeaf3067bfe5de6c7c05c1339.json  query-c5f90dd8d9d56e015ef7ba279f0655548caa75bc9de1b24c35dcdb5324ed784f.json  query-c9f175a638c19ea8c6b7b72bd08049c62cb7cca2f625471553dbc8fb16a21500.json  query-d3ff8d9c56a4325df7b7195af86bdeb59e7256cb3917534139caa7e75c6bc3f5.json  query-deab35cb2325a3b4ebdd60b2bdf2dc056f98f633833426a667bad29b73a2319e.json  query-eae033e621192e5cab4c562ad57f3979e53976110a6ef2e8c5cb70b68e3a98a9.json  query-eda06b5886b64747a447ad5209f37ac5501da347f47b3c3a49597b46138fa800.json  query-f42d279be7a03c8174156168df3dc1422edf92d9b6d9c6f754cf62be5418a94a.json
backend/src/: lib.rs  (+2 more)
(+181 files in other folders)
